fix some database stuff

--- a/website/base/templates/base/blog_page.html
+++ b/website/base/templates/base/blog_page.html
@@ -10,10 +10,9 @@
                 <br>
                 <a href="{{ post.relative_url }}">{{ post.title }}</a>
                 <br>
-                <p class="snippet">{{ post.content }}</p>
+                <p class="snippet">{{ post.snippet }}</p>
             </p>
         {% endfor %}
-
     </div>
 
 {% endblock paginated %}
