--- a/website/base/templates/base/blog_post.html
+++ b/website/base/templates/base/blog_post.html
@@ -9,16 +9,7 @@
 </div>
 
 <div class="post-content">
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non neque sagittis, pulvinar arcu in, malesuada nunc. Donec et egestas tellus, sed aliquam metus. Donec iaculis nunc arcu, eu pulvinar lorem fermentum a. Praesent bibendum quam non augue tincidunt aliquet. Praesent id diam tortor. Phasellus at enim turpis. Quisque semper, odio ac sagittis sollicitudin, mauris risus gravida eros, vitae bibendum nulla ligula nec metus. Duis ut nulla auctor, egestas diam sed, scelerisque lectus. Pellentesque ornare bibendum justo vitae commodo. Vestibulum interdum erat vel felis malesuada luctus.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non neque sagittis, pulvinar arcu in, malesuada nunc. Donec et egestas tellus, sed aliquam metus. Donec iaculis nunc arcu, eu pulvinar lorem fermentum a. Praesent bibendum quam non augue tincidunt aliquet. Praesent id diam tortor. Phasellus at enim turpis. Quisque semper, odio ac sagittis sollicitudin, mauris risus gravida eros, vitae bibendum nulla ligula nec metus. Duis ut nulla auctor, egestas diam sed, scelerisque lectus. Pellentesque ornare bibendum justo vitae commodo. Vestibulum interdum erat vel felis malesuada luctus.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non neque sagittis, pulvinar arcu in, malesuada nunc. Donec et egestas tellus, sed aliquam metus. Donec iaculis nunc arcu, eu pulvinar lorem fermentum a. Praesent bibendum quam non augue tincidunt aliquet. Praesent id diam tortor. Phasellus at enim turpis. Quisque semper, odio ac sagittis sollicitudin, mauris risus gravida eros, vitae bibendum nulla ligula nec metus. Duis ut nulla auctor, egestas diam sed, scelerisque lectus. Pellentesque ornare bibendum justo vitae commodo. Vestibulum interdum erat vel felis malesuada luctus.
-    </p>
-
+    {{ post.content|safe }}
 </div>
 
 {% endblock content %}
