--- a/website/base/templates/base/start.html
+++ b/website/base/templates/base/start.html
@@ -12,15 +12,15 @@
     <div id="links">
         <a class="imglink"
             href="blog/">
-            <img alt="Blog" src="https://i.imgur.com/x5Eb1vG.png">
+            <img alt="blog" src="https://i.imgur.com/x5Eb1vG.png">
         </a> 
         <a class="imglink"
             href="mailto:emanueljohnsongodin@gmail.com">
-            <img alt="Twitter" src="https://i.imgur.com/BUOJD9M.png">
+            <img alt="email" src="https://i.imgur.com/BUOJD9M.png">
         </a> 
         <a class="imglink"
-        href="mailto:emanueljohnsongodin@gmail.com">
-        <img alt="Twitter" src="https://i.imgur.com/EtFsf4E.png">
+        href="https://github.com/emanueljg">
+        <img alt="github" src="https://i.imgur.com/EtFsf4E.png">
         </a> 
     </div>
 
